[package]
name = "sample"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "arr_sample"
path = "src/arr_sample.rs"

[[bin]]
name = "user_define"
path = "src/user_define_sample.rs"

[dependencies]
